2009-10-06  Ivan Maidanski <ivmai@mail.ru>

	* include/gc.h: Reformat the code (make the indentation style
	uniform across the file).
	* include/gc.h (GC_SOLARIS_THREADS): Don't check for.
	* include/gc.h (GC_MIN, GC_MAX): Don't define.
	* mallocx.c (GC_malloc_many): Add comment to #endif.

2009-10-02  Ivan Maidanski <ivmai@mail.ru> (really Petter Urkedal)

	* configure.ac: Drop the subdir-objects Automake option, since
	it's incompatible with picking source files from libatomic_ops.
	* Makefile.in: Regenerate.

2009-10-01  Ivan Maidanski <ivmai@mail.ru> (really mostly Andreas Tobler)

	* allchblk.c (GC_fail_count, GC_large_alloc_warn_interval): Add
	"extern" keyword to a global variable declaration (some compilers
	require it).
	* alloc.c (GC_bytes_found, GC_unmap_threshold,
	GC_force_unmap_on_gcollect): Ditto.
	* dyn_load.c (GC_no_win32_dlls, GC_wnt): Ditto.
	* finalize.c (GC_fail_count): Ditto.
	* include/private/gc_hdrs.h (GC_hdr_cache_hits,
	GC_hdr_cache_misses): Ditto.
	* mallocx.c (GC_bytes_found): Ditto.
	* mark_rts.c (GC_save_regs_ret_val, GC_world_stopped): Ditto.
	* misc.c (GC_unmap_threshold): Ditto.
	* os_dep.c (GC_unmap_threshold, GC_old_allocator): Ditto.
	* pthread_support.c (GC_markers): Ditto.
	* thread_local_alloc.c (GC_gcjobjfreelist,
	GC_gcj_malloc_initialized, GC_gcj_kind): Ditto.
	* win32_threads.c (GC_fault_handler_lock, GC_write_cs,
	GC_dont_query_stack_min, GC_markers, GC_wnt): Ditto.

2009-10-01  Ivan Maidanski <ivmai@mail.ru>

	* Makefile.in: Regenerate (by autoreconf -vif, deleting libtool.m4
	first and using libtool-2.2, automake-1.10.2, autoconf-2.64).
	* aclocal.m4: Ditto.
	* config.guess: Ditto.
	* config.sub: Ditto.
	* configure: Ditto.
	* depcomp: Ditto.
	* install-sh: Ditto.
	* ltmain.sh: Ditto.
	* missing: Ditto.
	* mkinstalldirs: Ditto.
	* include/private/config.h.in: Ditto.

2009-10-01  Ivan Maidanski <ivmai@mail.ru>

	* tests/huge_test.c: Define GC_IGNORE_WARN (if not defined) to